latter spacing for headings and android whatsapp button link bug fix

--- a/src/Componants/assets/Components.scss
+++ b/src/Componants/assets/Components.scss
@@ -79,6 +79,7 @@ $black-90: rgba(0, 0, 0, 0.9);
 
   h3 {
     font-size: 1.25rem;
+    letter-spacing: -0.5px;
     margin-top: 0rem;
     font-weight: 700;
     color: $black-90;
