--- a/src/Layouts/Header/assets/Header.scss
+++ b/src/Layouts/Header/assets/Header.scss
@@ -102,6 +102,8 @@
         font-size: 1.456rem;
         font-weight: 700;
         line-height: 1;
+        margin-block: 0rem;
+        letter-spacing: -0.5px;
       }
       p {
         color: var(--text-gray);
@@ -122,9 +124,10 @@
     }
   }
   .sub-title {
-    color: black;
+    color: rgba(0, 0, 0, 0.9);
     font-weight: 700;
     font-size: 1.25rem;
+    letter-spacing: -0.4px;
   }
   .para {
     color: var(--text-gray);
