--- a/src/Layouts/Works/assets/Works.scss
+++ b/src/Layouts/Works/assets/Works.scss
@@ -6,6 +6,7 @@ $black-90: rgba(0, 0, 0, 0.9);
     margin-bottom: 2rem;
     font-weight: 700;
     color: $black-90;
+    letter-spacing: -0.5px;
   }
   .project-cards {
     display: grid;
